--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "@prisma/client": "6.3.0",
     "dotenv": "16.4.7",
-    "express": "5.0.1"
+    "express": "5.0.1",
+    "mysql2": "3.12.0"
   },
   "devDependencies": {
     "@types/express": "5.0.0",
