--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "dependencies": {
     "@prisma/client": "6.3.0",
+    "bcrypt": "5.1.1",
     "dotenv": "16.4.7",
     "express": "5.0.1",
+    "http-status": "2.1.0",
     "mysql2": "3.12.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "5.0.2",
     "@types/express": "5.0.0",
+    "@types/http-status": "^0.2.30",
     "@types/node": "22.10.7",
     "nodemon": "3.1.9",
     "prisma": "6.3.0",
