--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dotenv": "16.4.7",
     "express": "5.0.1",
     "http-status": "2.1.0",
-    "mysql2": "3.12.0"
+    "mysql2": "3.12.0",
+    "zod": "3.24.2"
   },
   "devDependencies": {
     "@types/bcrypt": "5.0.2",
