--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@prisma/client": "6.3.0",
     "bcrypt": "5.1.1",
+    "dayjs": "^1.11.19",
     "dotenv": "16.4.7",
     "express": "5.0.1",
     "http-status": "2.1.0",
