--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dotenv": "16.4.7",
     "express": "5.0.1",
     "http-status": "2.1.0",
+    "jsonwebtoken": "9.0.2",
     "mysql2": "3.12.0",
     "zod": "3.24.2"
   },
@@ -13,6 +14,7 @@
     "@types/bcrypt": "5.0.2",
     "@types/express": "5.0.0",
     "@types/http-status": "^0.2.30",
+    "@types/jsonwebtoken": "9.0.9",
     "@types/node": "22.10.7",
     "nodemon": "3.1.9",
     "prisma": "6.3.0",
