--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "@prisma/client": "6.3.0",
+    "axios": "^1.13.6",
     "bcrypt": "5.1.1",
+    "cheerio": "^1.2.0",
     "dayjs": "^1.11.19",
     "dotenv": "16.4.7",
     "express": "5.0.1",
@@ -12,6 +14,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "5.0.2",
+    "@types/cheerio": "^0.22.35",
     "@types/express": "5.0.0",
     "@types/http-status": "^0.2.30",
     "@types/jsonwebtoken": "9.0.9",
